--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,16 @@
-.gradle
-/build/
-!gradle/wrapper/gradle-wrapper.jar
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
 .project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-/out/
-
-### NetBeans ###
-/nbproject/private/
+.classpath
+.gradle/
+.settings/
 /build/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+build/
+target/
+classes/
+bin
+*.springBeans
+/lib/
+/out
+
+*.iml
+.idea/
+*.log
